crates/math-core/tests/snapshots/error_test__unicode_command.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\éx"
---
Error: Unknown command "\é".
   ╭─[ <input>:1:1 ]
   │
 1 │ \éx
   │ ─┬  
   │  ╰── unknown command
───╯
